<resources>
    <string name="app_name">ChatApp</string>
    <string name="textWelcome">Welcome to Chat.u</string>
    <string name="txt_register">Sign Up</string>
    <string name="txt_login">Sign In</string>
    <string name="txt_username">Username</string>
    <string name="txt_name">Name</string>
    <string name="txt_password">Password</string>
    <string name="txt_email">Email</string>
    <string name="txt_username_error">Write your username</string>
    <string name="txt_email_error">Please write your email</string>
    <string name="txt_password_error">Please write your password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_chat">Chats</string>
    <string name="sign_out">Sign Out</string>
    <string name="not_null">Tidak Boleh Kosong</string>
    <string name="err">Error Message</string>
    <string name="last_message">Last Message</string>
    <string name="no_message">No Message</string>
    <string name="sent_message">Image Sent</string>
    <string name="content_description">image view</string>
    <string name="send_message">send message</string>
    <string name="write_message_here">write message here...</string>
    <string name="what_do_you_want">What do you want?</string>
    <string name="text_delete">Deleted</string>
    <string name="failed">Failed, Not Deleted</string>
    <string name="message_notif">Write your message first!</string>
    <string name="welcome_txt">Sign in or Sign up to continue</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="type_something">Type something</string>
</resources>
