<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile_right_chat"
        android:layout_width="@dimen/_60dp"
        android:layout_height="@dimen/_60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_message_chat_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_left"
        android:text="@string/txt_username"
        app:layout_constraintBottom_toBottomOf="@id/iv_profile_right_chat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_profile_right_chat"
        app:layout_constraintTop_toTopOf="@id/iv_profile_right_chat" />

    <ImageView
        android:id="@+id/iv_right_message"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/profile"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_last_seen_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sent_message"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>