<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_cover_profile_setting"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200dp"
                android:contentDescription="@string/content_description"
                android:scaleType="centerCrop"
                android:src="@drawable/cover"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile_setting"
                android:layout_width="@dimen/_150dp"
                android:layout_height="@dimen/_150dp"
                android:layout_marginStart="124dp"
                android:layout_marginTop="128dp"
                android:layout_marginEnd="124dp"
                android:src="@drawable/profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.509"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_username_profile_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="46dp"
                android:layout_marginBottom="16dp"
                android:text="@string/txt_username"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/iv_profile_setting"
                app:layout_constraintStart_toStartOf="@+id/iv_profile_setting"
                app:layout_constraintTop_toBottomOf="@+id/iv_profile_setting"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_second_profile"
        android:layout_width="405dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="10dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_profile">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000">

            <ImageView
                android:id="@+id/iv_fb_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/fb" />

            <ImageView
                android:id="@+id/iv_ig_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="140dp"
                android:contentDescription="@string/content_description"
                app:layout_constraintBottom_toBottomOf="@+id/iv_fb_profile"
                app:layout_constraintStart_toEndOf="@+id/iv_fb_profile"
                app:layout_constraintTop_toTopOf="@+id/iv_fb_profile"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/instagram" />

            <ImageView
                android:id="@+id/iv_website_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_description"
                app:layout_constraintBottom_toBottomOf="@+id/iv_fb_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/iv_ig_profile"
                app:layout_constraintTop_toTopOf="@+id/iv_fb_profile"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/website" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_send_message_profile"
        android:layout_width="@dimen/_200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:backgroundTint="#00BCD4"
        android:text="@string/send_message"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_second_profile" />

</androidx.constraintlayout.widget.ConstraintLayout>